# phc-winner-argon2

./: .travis.yml  CMakeLists.txt  Makefile  appveyor.yml  libargon2.pc.in
include/: argon2.h
kats/: check-sums.py  test.py
latex/: CMakeLists.txt
man/: CMakeLists.txt
src/: test.c
